fix pause button spacing

--- a/apps/style/common.scss
+++ b/apps/style/common.scss
@@ -243,7 +243,6 @@ button.arrow:disabled {
 #soft-buttons {
   display: inline-block;
   vertical-align: top;
-  margin-left: -9px;
   -webkit-touch-callout: none;
   &.soft-buttons-compact {
     margin: 0;
